app/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milestone2-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: 
      - milestone2.smeyers.xyz
      - api.milestone2.smeyers.xyz
      secretName: smeyers-tls
  rules:
    - host: milestone2.smeyers.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  name: webport
    - host: api.milestone2.smeyers.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  name: apiport
